add metadata.rb files
Summary: Fixes T1767: add metadata.rb files

Test Plan: try it make sure it doesn't break anything with the existing. And then also try to upgrade to chef 11.10 and see if it still fails on dependency errors.

Reviewers: #everyone, gwarner

Reviewed By: #everyone, gwarner

Maniphest Tasks: T1767

Differential Revision: https://dev.blendtec.com/D1158

--- a/.arcconfig
+++ b/.arcconfig
@@ -1,5 +1,5 @@
 {
   "project_id" : "opsworks-cookbooks",
-  "conduit_uri" : "http://dev.blendtec.com",
+  "conduit_uri" : "https://dev.blendtec.com",
   "arc.land.onto.default" : "develop"
 }
